membuat aplikasi kalkulator sederhana

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /2-booking-hotel/build/
 /3-toko-keramik/nbproject/private/
 /3-toko-keramik/build/
+/kalkulator/nbproject/private/
+/4-kalkulator/nbproject/private/
+/4-kalkulator/build/
