--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
+*/build/*
+*/dist/*
 /1-data-Mahasiswa/nbproject/private/
-/1-data-Mahasiswa/build
 /2-booking-hotel/nbproject/private/
-/2-booking-hotel/build/
 /3-toko-keramik/nbproject/private/
-/3-toko-keramik/build/
 /kalkulator/nbproject/private/
 /4-kalkulator/nbproject/private/
-/4-kalkulator/build/
