belajar java oop;membuat class,object,method,constructor,constructor overloading

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 */build/*
 */dist/*
 */nbproject/private/*
+/java-oop/BelajarJava-oop/nbproject/private/
+/java-oop/BelajarJava-oop/build/
+/java-oop/belajar-java-oop/nbproject/private/
+/java-oop/belajar-java-oop/build/
